# quick-memo-applet

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  apptext.cpp  apptext.h  apptheme.cpp  apptheme.h  dashboardwindow.cpp  dashboardwindow.h  hotkeymanager.cpp  hotkeymanager.h  inputwindow.cpp  inputwindow.h  mainwindow.cpp  mainwindow.h  memostore.cpp  memostore.h  memowindow.cpp  memowindow.h  traycontroller.cpp  traycontroller.h
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: DATA_COMPATIBILITY.md  RELEASE.md
installer/: quick-memo-applet.iss
scripts/: package-windows.ps1
src/app/: main.cpp  mainwindow.cpp  mainwindow.h
src/core/: memostore.cpp  memostore.h
src/platform/: hotkeymanager.cpp  hotkeymanager.h
src/theme/: apptext.cpp  apptext.h  apptheme.cpp  apptheme.h
src/ui/: dashboardwindow.cpp  dashboardwindow.h  inputwindow.cpp  inputwindow.h  memowindow.cpp  memowindow.h  traycontroller.cpp  traycontroller.h
